# pump

./: .buildinfo  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  MI-extent.html  README.md  README.org  TIW-compositing.html  bulk-Ri.html  catalog-viewer.html  ctd-adcp.html  dataset-preparation.html  download-cmems.py  environment.yml  equix-divergence.html  equix-examine.html  generate-url-list.py  genindex.html  heat-momentum-budget-checks.html  heat_budget.m  intro.html  les-examine.html  les-tendencies.html  long-term-turbulence.html  mi-simple-model.html  mixing-efficiency.html  mixpods-diag-table.html  mixpods-les.html  mixpods-tao.html  mixpods.html  objects.inv  oni.html  post_install  pump-catalog.html  pump.org  pyproject.toml  search.html  searchindex.js  settings.ini  (+7 more)
_sources/: bulk-Ri.ipynb  dataset-preparation.ipynb  mi-simple-model.ipynb  mixpods-diag-table.ipynb  mixpods-les.ipynb  oni.ipynb  pump-catalog.ipynb  tiw-floats.ipynb
notebooks/: MI-extent.ipynb  TIW periods.ipynb  _config.yml  _toc.yml  bulk-Ri.ipynb  catalog-viewer.ipynb  cold-tongue-sst.ipynb  dataset-archival.ipynb  dataset-preparation.ipynb  equix-examine.ipynb  facetgrid.py  hr.ipynb  les-time-period.ipynb  mi-simple-model.ipynb  mitgcm-heat-budget.ipynb  mixpods-diag-table.ipynb  mixpods-les.ipynb  mixpods-tao.ipynb  mixpods.ipynb  modis-l2p.ipynb  pump-catalog.ipynb  pv calculation.ipynb  roms.ipynb  tiw-floats.ipynb  w_d_temp.ipynb
paper1/: paper1.org
paper2/: paper2.org
pump/: .gitignore  KPP.py  __init__.py  _version.py  calc.py  catalog.py  cesm.py  les.py  (+15 more)
(+6 files in other folders)
