[project]
name = "pump"
description = "PUMP project analysis"
authors = [
  { name="Deepak Cherian", email="deepak@cherian.net" },
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pump"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pump/_version.py"
versionfile_build = "pump/_version.py"
tag_prefix = "v"

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["xarray"]
